--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,16 +9,18 @@
       href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://unpkg.com/nes.css@latest/css/nes.min.css"
+      rel="stylesheet"
+    />
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
-
     <title>dotmind-vue</title>
   </head>
-
   <body>
     <noscript>
       <strong
-        >We're sorry but dotmind-vue doesn't work properly without JavaScript enabled. Please enable
-        it to continue.</strong
+        >We're sorry but dotmind-vue doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
