--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,22 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://unpkg.com/nes.css@latest/css/nes.min.css"
-      rel="stylesheet"
-    />
+    <style type="text/css" media="screen, print">
+      @font-face {
+        font-family: 'DungGeunMo';
+        src: url('https://fixelfont.s3.ap-northeast-2.amazonaws.com/DungGeunMo.woff');
+      }
+    </style>
+    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
-    <title>dotmind-vue</title>
+    <title>cli4-test</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but dotmind-vue doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
+        >We're sorry but cli4-test doesn't work properly without JavaScript enabled. Please enable
+        it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
