--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,20 +4,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <style type="text/css" media="screen, print">
-      @font-face {
-        font-family: 'DungGeunMo';
-        src: url('https://fixelfont.s3.ap-northeast-2.amazonaws.com/DungGeunMo.woff');
-      }
-    </style>
-    <title>cli4-test</title>
+    <title>도트마인드</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but cli4-test doesn't work properly without JavaScript enabled. Please enable
-        it to continue.</strong
+        >We're sorry but cli4-test doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
